Fix bottom gap

--- a/app/assets/scss/partials/_sidebar.scss
+++ b/app/assets/scss/partials/_sidebar.scss
@@ -3,7 +3,7 @@ $nav-color: #333;
 
 .off-canvas-wrap {
   height: 100%;
-  overflow: auto;
+  overflow-y: auto;
 }
 
 .inner-wrap {
